<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing = 20%</string>
    <string name="good_18">Good = 18%</string>
    <string name="fine_15">Fine = 15%</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_tip">Calculate tip</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="cost_of_service">Cost of Service</string>
</resources>